assets/style.css
/* Styling and font selection and size for index page */

@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');

body {
    background-color:black;
    font-size: 350%;
    font-family: 'Acme', sans-serif;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    color: white;
}

h1 { 
    font-size: 150%;
    color: white;
    
}

.box {
    width: 100%;
    height: 1000px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
}

.home {
    justify-content: center;
    align-items: center;
    display: flex;
    flex-direction: column;
}

.navigation {
    width: 50%;
    text-align: center;
    margin-bottom: 10px;
    padding: 20px;
    font-size: 80%;
    color: white;
    text-decoration: none;
    background: green;
    border-radius: 50px;
}

.navigation:hover {
    transition: 0.3s;
    transform: scale(1.1);
}

/* Quiz page and solution field styling */

#quizPage {
    font-size: 150%;
    font-family: 'Acme', sans-serif;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    color: white;
}

.answerBox {
    display: flex;
    margin: 0 auto;
    margin-bottom: 10px;
    padding-left: 20px;
    width: 70%;
    border-radius: 20px;
    background:green;
    font-size: 100%;
}

.answerBox:hover {
    transition: 0.3s;
    transform: scale(1.05);

}

.solutionLetter {
    padding: 10px;
    color: white;
}

.solutionData {
    padding: 10px;
    width: 100%;
}

/* Styling for right and wrong selection*/

.right {
    
    background: yellow;
}

.wrong{
   
    background: red;
}

/* Styles for the score display */
#scoreDisplay {
    justify-content: space-between;
    display: flex;
    
}

.scoreCalculator {
    text-align: center;
    font-size: 200%;
}

.scoreText {
    text-align: center;
}

#statusBar {
    width: 400px;
    height: 25px;
    margin-top: 10px;
    border-radius: 10px;
    border: 5px solid yellow;
    overflow: hidden;
}

#statusBarFull {
    height: 25px;
    background: yellow;
    width: 0%;
}

